# UM

./: Manual_de_usuario.md  README.md  pyproject.toml  readme_test.ipynb  to_do_list.txt
src/: app.py  paso_a_paso_flask
src/1_bases_de_datos_ficticias/: generador_materias.ipynb
src/1_bases_de_datos_ficticias/.ipynb_checkpoints/: generador_libros-checkpoint.ipynb
src/1_bases_de_datos_ficticias/bases/: libros.csv  materias.csv
src/1_bases_de_datos_ficticias/creds/: creds_google_conn.json
src/2_machine_learning/: 1_lda.ipynb
src/2_machine_learning/bases/: df_predicciones.csv
src/2_machine_learning/modelos/: modelo_lda.id2word  modelo_lda.state
src/objects/: vectorizador.pkl
src/static/: materias.html
src/static/css/: home.css  login.css  styles.css
src/static/css/pages/: apuntes.css  glosario.css  materias.css
src/templates/: recomendaciones.html  search.html
test/: app.py  app_mps.py  paso_a_paso_flask  requirements.txt
test/1_bases_de_datos_ficticias/: generador_libros.ipynb
test/1_bases_de_datos_ficticias/bases/: libros.csv
test/2_machine_learning/: 0_test_ocr.ipynb  2_clasificacion.ipynb
test/2_machine_learning/modelos/: modelo_lda  modelo_lda.expElogbeta.npy  modelo_lg.pkl
test/miscelaneas/: app_mps.py  test_propio.py
test/static/: apuntes.html  glosario.html  materias.html
test/static/css/: home.css  login.css  search.css
test/static/css/pages/: apuntes.css  glosario.css  (+1 more)
test/templates/: index.html
test/templates/auth/: login.html
test/templates_test/: home.css  home.html  home_2.html  index.html  login.html  search.html
