[tool.poetry]
name = "um"
version = "0.1.0"
description = ""
authors = ["Gonzalo Colman <gonzalocol96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
werkzeug = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
